--- a/RadioExample/RadioExample.csproj
+++ b/RadioExample/RadioExample.csproj
@@ -37,6 +37,9 @@
     <StartupObject>RadioExample.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Owf.Controls.DigitalDisplayControl">
+      <HintPath>.\Owf.Controls.DigitalDisplayControl.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -50,6 +53,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
