radio app rename + gui changes

--- a/RadioApp/app.config
+++ b/RadioApp/app.config
@@ -2,11 +2,11 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="RadioExample.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="RadioApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <RadioExample.Properties.Settings>
+        <RadioApp.Properties.Settings>
             <setting name="selectedFrequency" serializeAs="String">
                 <value>88900</value>
             </setting>
@@ -40,6 +40,6 @@
             <setting name="station10" serializeAs="String">
                 <value>108000</value>
             </setting>
-        </RadioExample.Properties.Settings>
+        </RadioApp.Properties.Settings>
     </userSettings>
 </configuration>
