--- a/RadioApp/Properties/Settings.settings
+++ b/RadioApp/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RadioExample.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RadioApp.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="selectedFrequency" Type="System.Int32" Scope="User">
