--- a/RadioApp/RadioApp.csproj
+++ b/RadioApp/RadioApp.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{8A37E728-2551-4944-AD6D-9D6133F400B8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RadioExample</RootNamespace>
-    <AssemblyName>RadioExample</AssemblyName>
+    <RootNamespace>RadioApp</RootNamespace>
+    <AssemblyName>RadioApp</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -34,7 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>RadioExample.Program</StartupObject>
+    <StartupObject>RadioApp.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icons8_radio_filled_32_tms_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Owf.Controls.DigitalDisplayControl">
@@ -65,6 +68,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
@@ -82,6 +86,9 @@
       <Project>{BE4D8C09-7E3F-4BBC-8BFA-8599604B5D5F}</Project>
       <Name>RadioLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icons8_radio_filled_32_tms_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
